--- a/pom.xml
+++ b/pom.xml
@@ -10,23 +10,11 @@
 
     <properties>
         <spring.version>3.2.2.RELEASE</spring.version>
-        <slf4j.version>1.5.8</slf4j.version>
+        <slf4j.version>1.7.10</slf4j.version>
         <log4j.version>1.2.15</log4j.version>
 
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.9</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.9</version>
-        </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -41,11 +29,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.taobao.csp</groupId>
-            <artifactId>switchcenter</artifactId>
-            <version>2.1.0.1</version>
         </dependency>
 
         <!-- Spring -->
@@ -111,7 +94,11 @@
             <scope>test</scope>
         </dependency>
         <!-- Spring end -->
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
