--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
     <properties>
         <spring.version>3.2.2.RELEASE</spring.version>
-        <slf4j.version>1.7.10</slf4j.version>
-        <log4j.version>1.2.15</log4j.version>
+        <slf4j.version>1.7.21</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
 
     </properties>
     <dependencies>
@@ -125,6 +125,12 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>5.0.0.Alpha2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.13</version>
         </dependency>
     </dependencies>
     
