--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
