--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,12 @@
             <artifactId>zkclient</artifactId>
             <version>0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
